# tensorly

./: .coveragerc  .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.md  CITATION.cff  CONTRIBUTING.rst  LICENSE.txt  Makefile  README.md  README.rst  __init__.py  base.py  deploy_docs.sh  ll1_tensor.py  requirements.txt  setup.cfg  setup.py  testing.py  tr_tensor.py  tucker_tensor.py  verify.py  visualization.py  wps.ipynb
backend/: cupy_backend.py
conda/: meta.yaml
datasets/: __init__.py  ll1_synthetic.py
decomposition/: __init__.py  _base_decomposition.py  _cmtf_als.py  _cp_power.py  _ll1.py  _ll1_constrained.py  _parafac2.py  _tr_svd.py
doc/: Makefile  about.rst  backend.rst  conf.py  home.rst  index.html  index.rst  installation.rst  kruskal_tensors.rst  minify.py  requirements_doc.txt  sg_execution_times.rst  tensor_basics.rst  tensor_decomposition.rst  tucker_tensors.rst  user_guide.rst
examples/: README.txt  nn_parafac IL2 example.ipynb  plot_tensor.py  quantized_decomposition.ipynb  sparse_parafac.ipynb
metrics/: __init__.py  factors.py  leverage_scores.py
notebooks/: Untitled.ipynb  matrix2vec.ipynb
random/: base.py
regression/: __init__.py
solvers/: admm.py  nnls.py
tenalg/: svd.py  tenalg_utils.py
tensorly/: __init__.py  _factorized_tensor.py  base.py  core.py  cp_tensor.py  kruskal.py  kruskal_tensor.py  mps_tensor.py  parafac2_tensor.py  plugins.py  preprocessing.py  quantization.py  testing.py  tr_tensor.py  tt_matrix.py  tt_tensor.py  tucker.py  tucker_tensor.py  version.py
tests/: test_preprocessing.py  test_tr_tensor.py
(+356 files in other folders)
