[metadata]
description-file = README.rst
licence-file = LICENSE.txt

[flake8]
# References:
# https://flake8.readthedocs.io/en/latest/user/configuration.html
# https://flake8.readthedocs.io/en/latest/user/error-codes.html

# Note: there cannot be spaces after comma's here
exclude = __init__.py
ignore =
    # Extra space in brackets
    E20,
    # Multiple spaces around ","
    E231,E241,
    # Comments
    E26,
    # Import formatting
    E4,
    # Ambiguous variable names
    E741
max-line-length = 90
